FIXES QA Tickets + ADDS some UX tasks (#93)
* edited css e html file of the angular component in order to align to the mock up look & feel of the chatbot widget

* ADD about page + search catalog page customized per provider + FIXES update form

* FIX search catalogs header

* ADD feedback connection to backend

* ADDS thank you message to contact us form

* Merge new style + FIX

* CHANGES update message style on users profile

* FIX input borders after creating billing account

* ADD type to feedback messages

* FIX Ticket#831220 read more license button

* FIX Ticket#831482 scroll to top after redirection

* ADDS only shows feedback when user is logged

---------

Co-authored-by: andmanfrin <andrea.manfrinato@eng.it>

--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -405,16 +405,22 @@
                                     <fa-icon [icon]="faScaleBalanced" class="fa-2xl text-primary-100 align-middle"></fa-icon>
                                 </div>
                             </div>
-                            <div id="terms-markdown" class="line-clamp-5">
-                                <markdown class="text-lg font-normal text-gray-700 dark:text-gray-200 mb-4 text-wrap break-all" [data]="productOff?.productOfferingTerm?.at(0)?.description"></markdown>
-                            </div>
-                            @if(productOff?.productOfferingTerm?.at(0)?.description){
-                                @if(showTermsMore==false){
-                                    <button class="mt-4 text-blue-500 focus:outline-none" (click)="toggleTermsReadMore()">Read more</button>
-                                } @else {
-                                    <button class="mt-4 text-blue-500 focus:outline-none" (click)="toggleTermsReadMore()">Read less</button>
-                                }
+                            <!-- Apply line-clamp to this div, not markdown -->
+                            <div #termsText [class.line-clamp-5]="!showTermsMore" class="overflow-hidden">
+                                <markdown
+                                [data]="productOff?.productOfferingTerm?.at(0)?.description"
+                                class="text-lg font-normal text-gray-700 dark:text-gray-200 mb-4 break-all">
+                                </markdown>
+                            </div>                            
+                            
+                            @if(showReadMoreButton){
+                                <button
+                                class="mt-4 text-blue-500 focus:outline-none"
+                                (click)="toggleTermsReadMore()">
+                                {{ showTermsMore ? 'Read less' : 'Read more' }}
+                                </button>
                             }
+                                                         
                         </div>
                     </div>
                 }
