--- a/src/app/shared/forms/markdown-textarea/markdown-textarea.component.html
+++ b/src/app/shared/forms/markdown-textarea/markdown-textarea.component.html
@@ -95,6 +95,7 @@
 
       }@else{
         <textarea id="editor"
+                  data-cy="textArea"
                   class="block w-full h-fit px-0 text-sm text-gray-800 dark:text-gray-200 bg-white dark:bg-secondary-300 border-0"
                   placeholder="Add product description..."
                   [value]="value"
