--- a/src/app/shared/forms/offer/catalogue/catalogue.component.html
+++ b/src/app/shared/forms/offer/catalogue/catalogue.component.html
@@ -37,7 +37,7 @@
                     </th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody data-cy="catalogList">
                 @for (cat of catalogs; track cat) {
                     <tr class="border-b hover:bg-gray-200 dark:border-gray-700 dark:hover:bg-secondary-200" (click)="toggleSelection(cat)"
                         [ngClass]="cat.id == selectedCatalog.id ? 'bg-gray-300 dark:bg-secondary-200' : 'bg-white dark:bg-secondary-300'">
