--- a/src/app/shared/forms/offer/general-info/general-info.component.html
+++ b/src/app/shared/forms/offer/general-info/general-info.component.html
@@ -1,11 +1,11 @@
 @if (nameControl) {
   <label for="prod-name" class="font-bold text-lg dark:text-white">{{ 'CREATE_OFFER._name' | translate }}</label>
-  <input id="prod-name" type="text" [formControl]="nameControl" maxLength="100"
+  <input data-cy="offerName" id="prod-name" type="text" [formControl]="nameControl" maxLength="100"
          class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"/>
 }
 @if (versionControl) {
   <label for="prod-version" class="font-bold text-lg dark:text-white">{{ 'CREATE_OFFER._version' | translate }}</label>
-  <input id="prod-version" type="text" [formControl]="versionControl"
+  <input data-cy="offerVersion" id="prod-version" type="text" [formControl]="versionControl"
          class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"/>
 }
 @if (statusControl && formType === 'update') {
