--- a/src/app/shared/forms/offer/prod-spec/prod-spec.component.html
+++ b/src/app/shared/forms/offer/prod-spec/prod-spec.component.html
@@ -46,7 +46,7 @@
             </th>
           </tr>
           </thead>
-          <tbody>
+          <tbody data-cy="prodSpecs">
             @for (prod of prodSpecs; track $index) {
               <tr class="border-b hover:bg-gray-200 dark:border-gray-700 dark:hover:bg-secondary-200"
                   (click)="!isEditMode && toggleSelection(prod)"
