--- a/src/app/shared/forms/offer/price-plans/price-component-drawer/price-component-drawer.component.html
+++ b/src/app/shared/forms/offer/price-plans/price-component-drawer/price-component-drawer.component.html
@@ -16,12 +16,12 @@
       <!-- Nombre -->
       <div>
         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">{{ 'FORMS.PRICE_PLAN_COMPONENT._name' | translate }}</label>
-        <input formControlName="name" type="text"
+        <input data-cy="priceComponentName" formControlName="name" type="text"
                class="mt-1 w-full p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-100">
       </div>
 
       <!-- Descripción -->
-      <div>
+      <div data-cy="priceComponentDescription">
         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">{{ 'FORMS.PRICE_PLAN_COMPONENT._description' | translate }}</label>
         <app-markdown-textarea formControlName="description"></app-markdown-textarea>
       </div>
@@ -30,6 +30,7 @@
         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">Base price</label>
       
         <input
+          data-cy="price"
           formControlName="price"
           type="number"
           step="0.1"
@@ -104,7 +105,7 @@
       <!-- Tipo de Precio -->
       <div>
         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">{{ 'FORMS.PRICE_PLAN_COMPONENT._type_of_price' | translate }}</label>
-        <select formControlName="priceType" class="mt-1 w-full p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-100">
+        <select data-cy="priceType" formControlName="priceType" class="mt-1 w-full p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-100">
           <option value="one time">{{ 'FORMS.PRICE_PLAN_COMPONENT._one_time' | translate }}</option>
           <option value="recurring">{{ 'FORMS.PRICE_PLAN_COMPONENT._recurring' | translate }}</option>
           <option value="recurring-prepaid">{{ 'FORMS.PRICE_PLAN_COMPONENT._recurring_prepaid' | translate }}</option>
@@ -116,7 +117,7 @@
       @if (priceComponentForm.get('priceType')?.value === 'recurring' || priceComponentForm.get('priceType')?.value === 'recurring-prepaid') {
         <div>
           <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">{{ 'FORMS.PRICE_PLAN_COMPONENT.recurring_period' | translate }}</label>
-          <select formControlName="recurringPeriod" class="w-full p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-100">
+          <select data-cy="recurringType" formControlName="recurringPeriod" class="w-full p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-100">
             <option value="day">{{ 'FORMS.PRICE_PLAN_COMPONENT._daily' | translate }}</option>
             <option value="week">{{ 'FORMS.PRICE_PLAN_COMPONENT._weekly' | translate }}</option>
             <option value="month">{{ 'FORMS.PRICE_PLAN_COMPONENT._monthly' | translate }}</option>
@@ -126,7 +127,7 @@
       } @else if (priceComponentForm.get('priceType')?.value === 'usage') {
         <div>
           <label class="block text-sm font-medium text-gray-700 dark:text-gray-300">{{ 'FORMS.PRICE_PLAN_COMPONENT._unit' | translate }}</label>
-          <input formControlName="usageUnit" type="text" placeholder="Ej. GB, CPU, Horas"
+          <input data-cy="usageInput" formControlName="usageUnit" type="text" placeholder="Ej. GB, CPU, Horas"
                  class="w-full p-2 border rounded dark:bg-gray-700 dark:border-gray-600 dark:text-gray-100">
         </div>
       }
@@ -228,7 +229,7 @@
       <!-- Botones -->
       <div class="flex justify-end space-x-3">
         <button type="button" (click)="closeDrawer()" class="px-4 py-2 bg-gray-300 dark:bg-gray-600 dark-text:white rounded">{{ 'FORMS.PRICE_PLAN_COMPONENT._cancel' | translate }}</button>
-        <button type="submit" [disabled]="priceComponentForm.invalid" [ngClass]="priceComponentForm.invalid ? 'opacity-50 cursor-not-allowed' : 'cursor-pointer'" class="px-4 py-2 bg-blue-500 text-white rounded">{{ 'FORMS.PRICE_PLAN_COMPONENT._save' | translate }}</button>
+        <button data-cy="savePriceComponent" type="submit" [disabled]="priceComponentForm.invalid" [ngClass]="priceComponentForm.invalid ? 'opacity-50 cursor-not-allowed' : 'cursor-pointer'" class="px-4 py-2 bg-blue-500 text-white rounded">{{ 'FORMS.PRICE_PLAN_COMPONENT._save' | translate }}</button>
       </div>
     </form>
 
