--- a/src/app/shared/forms/offer/price-plans/price-plans.component.html
+++ b/src/app/shared/forms/offer/price-plans/price-plans.component.html
@@ -3,7 +3,8 @@
 
   <!-- Payment Online Checkbox -->
   <div class="mb-4 flex items-center">
-    <input type="checkbox" 
+    <input type="checkbox"
+           data-cy="onlinePayment"
            [formControl]="paymentOnlineControl"
            (change)="onPaymentOnlineChange($event)"
            class="w-8 h-8 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600 disabled:opacity-50 disabled:cursor-not-allowed">
@@ -23,7 +24,7 @@
   </app-price-plans-table>
 
   <!-- Add Price Plan Button -->
-  <button type="button" (click)="openPricePlanDrawer()"
+  <button data-cy="newPricePlan" type="button" (click)="openPricePlanDrawer()"
           class="mt-2 px-4 py-2 flex items-center justify-center text-base font-medium bg-secondary-50 dark:bg-secondary-100 text-primary-100 dark:text-primary-50 rounded">
     <svg class="min-w-4 w-4 h-4 md:mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
       <path fill="currentColor"
