--- a/src/app/pages/product-orders/sections/order-info/order-info.component.html
+++ b/src/app/pages/product-orders/sections/order-info/order-info.component.html
@@ -292,12 +292,12 @@
                                   {{orderToShow?.orderDate | date:'EEEE, dd/MM/yy, HH:mm'}}
                               </h3>
                             </div>
-                            <div class="flex flex-row gap-2 pb-2 text-gray-600">
+                            <div class="flex flex-row gap-2 text-gray-600">
                               <p class="w-fit text-base font-bold shrink-0 dark:text-white">
                                   Customer Info:
                               </p>
                             </div>
-                            <div class="flex flex-row gap-2 pb-2 text-gray-600">
+                            <div class="flex flex-row gap-2 pb-2 pt-2 ml-2 text-gray-600">
                               <p class="w-fit text-base font-bold shrink-0 dark:text-white">
                                   Name
                               </p>
@@ -305,7 +305,7 @@
                                 {{ customerName$ | async }}
                               </h3>
                           </div>
-                            <div class="flex flex-row gap-2 pb-2 text-gray-600">
+                            <div class="flex flex-row gap-2 pb-2 ml-2 text-gray-600">
                                 <p class="w-fit text-base font-bold shrink-0 dark:text-white">
                                     Billing address
                                 </p>
@@ -313,7 +313,7 @@
                                     {{orderToShow.billingAccount.contact[0].contactMedium[1].characteristic.city}}, {{orderToShow.billingAccount.contact[0].contactMedium[1].characteristic.street1}}, {{orderToShow.billingAccount.contact[0].contactMedium[1].characteristic.country}} ({{orderToShow.billingAccount.name}})
                                 </h3>
                             </div>
-                            <div class="flex flex-row gap-2 pb-2 text-gray-600">
+                            <div class="flex flex-row gap-2 pb-2 ml-2 text-gray-600">
                                 <p class="w-fit text-base font-bold shrink-0 dark:text-white">
                                     Contact Email
                                 </p>
@@ -508,7 +508,7 @@
 <!-- Backdrop (se muestra cuando el menú está abierto) -->
 @if (isDrawerOpen) {
   <div class="fixed inset-0 top-0 left-0 right-0 h-screen bg-black bg-opacity-50 z-40" (click)="closeDrawer()"></div>
-}
+
 <!-- Drawer for Notes -->
 <div id="drawer-notes"
      class="fixed top-0 right-0 z-50 h-screen p-4 overflow-y-auto transition-transform bg-secondary-50 w-5/12 dark:bg-primary-100 flex flex-col"
@@ -518,21 +518,22 @@
 
   <!-- Header -->
   <div class="flex justify-between items-center border-b pb-3">
-    <h5 id="drawer-notes-label" class="inline-flex items-center text-base font-semibold text-gray-500 dark:text-gray-400">
-      <svg class="w-4 h-4 me-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 448 512">
+    <h5 id="drawer-notes-label" class="flex items-center text-base font-semibold text-gray-500 dark:text-gray-400">
+      <svg class="w-4 h-4 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 448 512">
         <path d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l224 0 0-112c0-26.5 21.5-48 48-48l112 0 0-224c0-35.3-28.7-64-64-64L64 32zM448 352l-45.3 0L336 352c-8.8 0-16 7.2-16 16l0 66.7 0 45.3 32-32 64-64 32-32z"/>
       </svg>
       Order Notes
     </h5>
 
     <button type="button" aria-controls="drawer-notes" (click)="closeDrawer()"
-            class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8">
-      <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+            class="flex items-center justify-center text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8">
+      <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
               d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
       </svg>
     </button>
   </div>
+
 
   <!-- Loading Spinner (visible for 1s) -->
   <div *ngIf="isLoading" class="flex flex-col items-center justify-center flex-1">
@@ -587,6 +588,7 @@
   </div>
 
 </div>
+}
 
 <!-- FIXME: We need an standalone error message component-->
 @if(showError){
