FIX pay per use input in order to provide price simulation (#105)
* FIX pay per use input in order to provide price simulation

* FIX escape key set to close drawer

* FIX terms and conditions not showing from details view

--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -93,7 +93,7 @@
   [productOff]="productOff"
   [prodSpec]="prodSpec"
   [isOpen]="isDrawerOpen"
-  [width]="'w-96'"
+  [width]="'w-2/3'"
   (closeDrawer)="closeDrawer()"
 ></app-price-plan-drawer>
 
