--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -525,6 +525,6 @@
   [productOff]="productOff"
   [prodSpec]="prodSpec"
   [isOpen]="isDrawerOpen"
-  [width]="'w-96'"
+  [width]="'w-2/3'"
   (closeDrawer)="closeDrawer()">
 </app-price-plan-drawer>
