--- a/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
+++ b/src/app/shared/price-plan-drawer/price-plan-drawer.component.html
@@ -71,29 +71,20 @@
     }
 
     @if(metrics.length>0){
-      <p class="mt-4 mb-4 text-sm text-gray-500 dark:text-gray-400">Please select the metric you need to suit this offer to you.</p>
-      <div class="flex flex-row">
-        <!-- Usage Spec select -->
-        <!--<select (change)="onUsageSpecChange($event)" class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-gray-100 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-          <option value="">Select a usage specification</option>
-          @for (key of usageSpecIds; track key) {
-            <option [value]="key">{{ key }}</option>
-          }
-        </select>-->
-      
-        <!-- Unit of Measure select -->
-        <!--@if (selectedUsageSpecId) {-->
-        
-          <select (change)="onMetricChange($event)" class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-gray-100 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-            @if(selectedUnitOfMeasure){
-              <option value="selectedMetric">{{selectedUnitOfMeasure}}</option>
-            }            
-            @for (metric of metrics || []; track metric) {
-              @if(metric.unitOfMeasure!=selectedUnitOfMeasure){
-                <option [value]="metric">{{ metric.unitOfMeasure }}</option>
-              }              
-            }
-          </select>
+      <p class="mt-4  text-sm text-gray-500 dark:text-gray-400">Please on each metric indicate the value that best fits for you.</p>
+      <div class="grid grid-cols-4 gap-2 mb-4">
+        @for (metric of metrics || []; track metric.unitOfMeasure) {
+          <div class="flex flex-col">
+            <h5 class="text-wrap break-all text-base text-primary-100 dark:text-gray-400">{{ metric.unitOfMeasure }}</h5>
+            <input
+            type="number"
+            (input)="onMetricChange($event, metric)"
+            class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm dark:bg-secondary-300 dark:text-white"
+            placeholder="{{metric.value}}"
+          />
+          </div>
+
+        }
         <!--}-->
       </div> 
     }
